Align edit/create heights; fix emoji picker clipping; unify add-button spacing.

--- a/task-manager-front/src/app/components/task-form/task-form.component.scss
+++ b/task-manager-front/src/app/components/task-form/task-form.component.scss
@@ -5,7 +5,6 @@
   padding: 0.7rem 1rem 0.32rem 1rem;
   display: flex;
   flex-direction: column;
-  margin-top: 1rem;
   font-family: var(--font-sans);
 
   .form-control {
@@ -56,6 +55,7 @@
     line-height: 1;
     display: flex;
     align-items: center;
+
     &:hover {
       filter: brightness(1.18);
     }
@@ -80,13 +80,16 @@
     .btn-success {
       background: var(--success);
       color: #fff;
+
       &:hover {
         background: #269d3c;
       }
     }
+
     .btn-secondary {
       background: #dadada;
       color: #333;
+
       &:hover {
         background: #bbb;
       }
